--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 local.properties
 # Log Files
 *.log
+target/m2e-wtp/web-resources/META-INF/MANIFEST.MF
+target/m2e-wtp/web-resources/META-INF/maven/br.com.compreseujogo/compreseujogo_3.0/pom.properties
