--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ local.properties
 *.log
 target/m2e-wtp/web-resources/META-INF/MANIFEST.MF
 target/m2e-wtp/web-resources/META-INF/maven/br.com.compreseujogo/compreseujogo_3.0/pom.properties
+*.MF
+*.properties
